# re-cue

./: .bumpversion.cfg  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  .recue.yaml.example  .secrets.baseline  .secretsignore  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  OPEN_SOURCE_CHECKLIST.md  README.md  SECURITY.md  agile-forecaster-analysis.txt  install.sh  phase1-structure.md  phase2-actors.md  phase3-boundaries.md  phase4-use-cases.md  test-smoketest-local.sh
reverse-engineer-python/: .recue.yaml.example  =3.0.0  CHANGELOG.md  Dockerfile  MANIFEST-PYTHON.md  PYTHON-COMPLETE.md  PYTHON-VERSION.md  README-PYTHON.md  README.md  install-python.sh  pyproject.toml  requirements-dev.txt  requirements-translation.txt  requirements.txt  setup.py  test-fourplusone-output.md  test_fourplusone.py  test_interactive_manual.py
reverse-engineer-python/docs/: PHASE4-COMPLETION-SUMMARY.md  PHASE5-COMPLETION-SUMMARY.md  PHASE5-ENHANCEMENT3-VALIDATION.md  PHASE5-ENHANCEMENT4-TEMPLATE-TESTING.md  PHASE6-COMPLETION-SUMMARY.md
reverse-engineer-python/examples/: jira_integration_example.py  logging_example.py
reverse-engineer-python/reverse_engineer/: __init__.py  analyzer.py  boundary_enhancer.py  cache_manager.py  cli.py  config_wizard.py  diagram_generator.py  generators.py  interactive_editor.py  logging_config.py  optimization.py  optimized_analyzer.py  phase1-structure.md  phase2-actors.md  phase3-boundaries.md  phase4-use-cases.md  phase_manager.py  progress_tracker.py  utils.py
reverse-engineer-python/reverse_engineer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
reverse-engineer-python/scripts/: README.md  build_glossary.py  extract_content_patterns.py  generate_i18n_content.py  translate_content_patterns.py  translate_templates.py  validate_translations.py
reverse-engineer-python/tests/: performance_baseline.json  run_benchmarks.py  test_analyzer_wrapper.py  test_boundary_enhancer.py  test_business_process_identifier.py  test_cache_manager.py  test_config_wizard.py  (+34 more)
(+609 files in other folders)
